# OptI-ProMP

./: README.md
TrajOpt_UoL/promp_trajopt/: README.md
TrajOpt_UoL/promp_trajopt/traj_opt/: CMakeLists.txt
TrajOpt_UoL/promp_trajopt/traj_opt/launch/: readme.txt
TrajOpt_UoL/promp_trajopt/traj_opt/scripts/: image_proc.py  stem_detect_edge.py
TrajOpt_UoL/promp_trajopt/traj_opt/src/: APF-gen.py  Franka_pushing_clusters.py  Readme.txt  cost_function.py  formulations.py  franka_Intpromp_noAPF.py  franka_Intpromp_noAPF_seqOpt.py  franka_Intpromp_noAPF_seqOpt2.py  franka_Intpromp_noAPF_seqOpt_final.py  franka_Intpromp_noAPF_verifiedmatplotlib.py  franka_kinematics.py  plot_traj.py  promp_cond.npz  traj_SeqOpt.py  traj_SeqOpt2.py  traj_init_opt.npz  traj_opt.csv  traj_opt.py  traj_opt_Geri.py  traj_opt_command.py
TrajOpt_UoL/promp_trajopt/traj_opt/src/additions/: Franka_pushing_clusters_orig.py  franka_Intpromp_APF.py  franka_Intpromp_Old.py  franka_Intpromp_noAPF_bounds_opthalftraj.py  trajectory_optimize.py
TrajOpt_UoL/promp_trajopt/traj_opt/src/older scripts (no seq opt)/: franka_Intpromp.py  franka_IntprompOpt.py  franka_Intpromp_noAPF.py  traj_opt.py  (+2 more)
arm_control/: CMakeLists.txt  arm_control_plugins.xml
arm_control/config/: control.yaml
arm_control/include/arm_control/: effort_joint_interface.h
arm_control/launch/: control.launch  moveit.launch  rviz.launch
arm_control/rviz/: panda.rviz
franka_bringup/: CMakeLists.txt  package.xml
franka_bringup/launch/: bringup.launch  cluster_bringup.launch  franka_bringup.launch  franka_bringup_debug.launch
franka_bringup/rviz/: panda_gazebo.rviz  panda_moveit.rviz  rviz.rviz
franka_gazebo/: CMakeLists.txt  package.xml
franka_gazebo/config/: moveit_panda_controllers.yaml  ompl_planning.yaml  panda_controllers.yaml  panda_joint_limits.yaml  panda_kinematics.yaml
franka_gazebo/launch/: control.launch  moveit.rviz  moveit_move_group.launch  moveit_planning_context.launch  moveit_rviz.launch  ncnr_moveit_bringup.launch  world_launch.launch
franka_gazebo/path_planning/: ompl_planning_pipeline.launch.xml  planning_pipeline.launch.xml  sensor_manager.launch.xml  thorvald_arm_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml
franka_gazebo/scripts/: img_record.py  state_sub.py
franka_gazebo/worlds/: LAR_clusters.world  riseholme.world  riseholme_clusters.world
panda_description/: CMakeLists.txt  package.xml
panda_description/models/: franka_arm_gripper.xacro
panda_description/models/clusters/cluster1/: model.config
panda_description/models/clusters/cluster1/urdf/: cluster1_extras.urdf  cluster1_extras.xacro
panda_description/models/clusters/cluster2/: model.config
panda_description/models/clusters/cluster2/sdf/: cluster2_extras.sdf
panda_description/models/clusters/cluster2/urdf/: cluster2_extras.urdf  cluster2_extras.xacro  cluster2p2_extras.xacro
panda_description/models/clusters/cluster3/: model.config
panda_description/models/clusters/cluster3/urdf/: cluster3_extras.urdf  cluster3_extras.xacro
panda_description/models/clusters/cluster4/: model.config
panda_description/models/clusters/cluster4/urdf/: cluster4_extras.urdf  cluster4_extras.xacro
panda_description/models/clusters/extras/: cluster11_extras.xacro  cluster3_extras.xacro  cluster4_extras.xacro  cluster5_extras.xacro  cluster6_extras.xacro  cluster7_extras.xacro  cluster8_extras.xacro  cluster9_extras.xacro
panda_description/models/clusters/extras/cluster11/: model.config
panda_description/models/clusters/extras/cluster11/urdf/: cluster11_extras.urdf  cluster11_extras.xacro
panda_description/models/clusters/extras/cluster7/: model.config
panda_description/models/clusters/extras/cluster7/urdf/: cluster7_extras.urdf  cluster7_extras.xacro
panda_description/models/clusters/extras/cluster8/: model.config
panda_description/models/clusters/extras/cluster8/urdf/: cluster8_extras.urdf  cluster8_extras.xacro
panda_description/models/panda_arm/: panda_arm_gazebo.urdf.xacro  panda_arm_gazebo.xacro  panda_arm_gazebo_old.xacro
panda_description/models/panda_gripper/: panda_gripper_gazebo.urdf.xacro  panda_gripper_gazebo.xacro
panda_description/models/realsense/realsense2_description/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro
panda_description/models/saga_gripper/meshes/: BASKET_CLAMP.stl  CUTTER_L.stl  CUTTER_R.stl  CUTTING_FINGER.stl  INNER_FINGER.stl  MIRRORINNER_FINGER.stl  OUTER_FINGER.stl
panda_description/models/saga_gripper/urdf/: gripper.gazebo.xacro  gripper.macro.xacro
(+59 files in other folders)
